--- a/producer-consumer-api/build.gradle
+++ b/producer-consumer-api/build.gradle
@@ -6,5 +6,9 @@ apply plugin: 'java'
 sourceCompatibility = 1.8
 
 dependencies {
+
+    compile group: 'org.apache.kafka', name: 'kafka-clients', version: '2.0.0'
+    compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.25'
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
