--- a/spring-kafka-api/src/main/resources/application.yaml
+++ b/spring-kafka-api/src/main/resources/application.yaml
@@ -4,6 +4,9 @@ spring:
     listener:
       ack-mode: manual
     bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.apache.kafka.common.serialization.DoubleSerializer
     consumer:
       group-id: sample-kafka-spring-consumer
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
