Enable auto commit.

--- a/spring-kafka-api/src/main/resources/application.yaml
+++ b/spring-kafka-api/src/main/resources/application.yaml
@@ -2,7 +2,7 @@
 spring:
   kafka:
     listener:
-      ack-mode: manual
+      concurrency: 2
     bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
     producer:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
@@ -11,5 +11,5 @@ spring:
       group-id: sample-kafka-spring-consumer
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.apache.kafka.common.serialization.DoubleDeserializer
-      enable-auto-commit: false
+      enable-auto-commit: true
       auto-offset-reset: "earliest"
